[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Enemies/ShootingFlower/ShootingFlower.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/EnemyHurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Enemies/FixedEffectFSM.gd" type="Script" id=3]
[ext_resource path="res://Entities/Enemies/Stats.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="CircleShape2D" id=2]
radius = 12.9764

[node name="ShootingFlower" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0666667, 0.180392, 0.933333, 1 )
self_modulate = Color( 0.0666667, 0.180392, 0.933333, 1 )
scale = Vector2( 1.5, 1.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_speed = 100
max_health = 10000

[node name="EffectFSM" type="Node" parent="."]
script = ExtResource( 3 )

[node name="EnemyHurtbox" parent="." instance=ExtResource( 2 )]
effected_by = [ true, false, true, false, true ]

[node name="CollisionShape2D" parent="EnemyHurtbox" index="0"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="bullet_spawn" type="Position2D" parent="."]
position = Vector2( 0, 12 )
[connection signal="immobilized" from="Stats" to="." method="_on_Stats_immobilized"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="EnemyHurtbox"]
